# namebase_techtask

./: .gitignore  README.md  docker-compose.yml  dockerfile  manage.py  pyproject.toml  requirements.txt
api/: models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py
namebase/: settings.py  urls.py  wsgi.py
