[project]
name = "namebase"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "ruff>=0.11.10",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "B", "C90", "UP"]
ignore = ["E501"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations"
]
[tool.ruff.format]
quote-style = "double" # Использовать двойные кавычки для строк
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
